--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,7 +8,19 @@ output:
 
 ## Loading and preprocessing the data
 
-
+Unzip
+```{r}
+unzip("activity.zip")
+```
+Read csv file
+```{r}
+act <- read.csv("activity.csv")
+```
+Check data
+```{r}
+head(act)
+summary(act)
+```
 
 ## What is mean total number of steps taken per day?
 
