--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -24,27 +24,27 @@ summary(act)
 
 ## What is mean total number of steps taken per day?
 
-Calculate the total number of steps taken per day
+**Calculate the total number of steps taken per day**
 
 ```{r steps_day, echo=TRUE}
-act_notNan <- subset(act, !is.na(act$steps))
+act_notNan <- act_notNan <- na.omit(act)
 act_steps_day <- setNames(aggregate(
                           x=act_notNan$steps, by=list(act_notNan$date), sum), 
                  c("Date", "Total_Steps"))
 
 ```
 
-If you do not understand the difference between a histogram and a barplot, 
+**If you do not understand the difference between a histogram and a barplot, 
 research the difference between them. Make a histogram of the total number 
-of steps taken each day
+of steps taken each day**
 
-```{r hist, echo=TRUE}
+```{r hist, out.height="50%", out.width="50%", echo=TRUE}
 hist(act_steps_day$'Total_Steps', 
      col = "green", main="Steps Frequency", xlab = "Step Intervals")
 ```
 
-Calculate and report the mean and median of the total number of steps taken 
-per day
+**Calculate and report the mean and median of the total number of steps taken 
+per day**
 
 ```{r meanMedian, echo=TRUE}
 mean(act_steps_day$Total_Steps)
@@ -53,21 +53,66 @@ median(act_steps_day$Total_Steps)
 
 ## What is the average daily activity pattern?
 
-Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) 
-and the average number of steps taken, averaged across all days (y-axis)
+**Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) 
+and the average number of steps taken, averaged across all days (y-axis)**
 
-```{r average, echo=TRUE}
+```{r average, warning = FALSE, message = FALSE, echo=TRUE}
+library(Hmisc)
 act_mean <- aggregate(steps ~ interval, data = act_notNan, mean)
 with(act_mean, plot(interval, steps, type="l", col="blue", main="Days Average"))
-
+minor.tick(nx = 10, ny = 5, tick.ratio = 0.5)
+abline(v = seq(0, 2500, 100), lty = 2, col = "gray")
+abline(h = seq(0, 210, 10), lty = 2, col = "gray")
 ```
 
-Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
-
-
+**Which 5-minute interval, on average across all the days in the dataset, contains 
+the maximum number of steps?**
+```{r max, echo=TRUE}
+subset(act_mean$interval, act_mean$steps == max(act_mean$steps))
+```
 
 ## Imputing missing values
 
+**Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)**
+```{r sumNA, echo=TRUE}
+sum(!complete.cases(act))
+```
 
+**Devise a strategy for filling in all of the missing values in the dataset. 
+The strategy does not need to be sophisticated. For example, you could use the 
+mean/median for that day, or the mean for that 5-minute interval, etc.**
+
+To decide the best strategy keep in mind that:
+
+- Can't drop rows because may introduce bias into some calculations or summaries of the data.
+- All NA values are in the steps column.
+- NA are found in all intervals of the same date.
+
+So, I decided to use the mean for that 5-minute interval.
+
+
+**Create a new dataset that is equal to the original dataset but with the missing data filled in.**
+
+```{r fill, echo=TRUE}
+act_fill <- act
+
+act_inter <- setNames(aggregate(
+        x=act_notNan$steps, by=list(act_notNan$interval), mean), 
+        c("Interval", "Steps_mean"))
+
+
+for(int in act_inter$Interval){
+        step <- act_inter$Steps_mean[act_inter$Interval == int]
+        act_fill$steps[is.na(act_fill$steps) & act_fill$interval == int] <- step
+}
+
+summary(act_fill)
+```
+
+**Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?**
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+**Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.**
+
+**Make a panel plot containing a time series plot (i.e. \color{red}{\verb|type = "l"|}type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.**
