--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -28,8 +28,8 @@ summary(act)
 
 ```{r steps_day, echo=TRUE}
 act_notNan <- act_notNan <- na.omit(act)
-act_steps_day <- setNames(aggregate(
-                          x=act_notNan$steps, by=list(act_notNan$date), sum), 
+act_steps_day <- setNames(aggregate(x=act_notNan$steps, 
+                                    by=list(act_notNan$date), sum), 
                  c("Date", "Total_Steps"))
 
 ```
@@ -67,13 +67,15 @@ abline(h = seq(0, 210, 10), lty = 2, col = "gray")
 
 **Which 5-minute interval, on average across all the days in the dataset, contains 
 the maximum number of steps?**
+
 ```{r max, echo=TRUE}
 subset(act_mean$interval, act_mean$steps == max(act_mean$steps))
 ```
 
 ## Imputing missing values
 
-**Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)**
+**Calculate and report the total number of missing values in the dataset (i.e. the 
+total number of rows with NAs)**
 ```{r sumNA, echo=TRUE}
 sum(!complete.cases(act))
 ```
@@ -91,7 +93,8 @@ To decide the best strategy keep in mind that:
 So, I decided to use the mean for that 5-minute interval.
 
 
-**Create a new dataset that is equal to the original dataset but with the missing data filled in.**
+**Create a new dataset that is equal to the original dataset but with the missing 
+data filled in.**
 
 ```{r fill, echo=TRUE}
 act_fill <- act
@@ -109,10 +112,60 @@ for(int in act_inter$Interval){
 summary(act_fill)
 ```
 
-**Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?**
+**Make a histogram of the total number of steps taken each day and Calculate and 
+report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?**
+
+```{r newHist, out.height="50%", out.width="50%", echo=TRUE}
+act_new_sd <- setNames(aggregate(x=act_fill$steps, by=list(act_fill$date), sum),
+                       c("Date", "Total_Steps"))
+```
+Compare the two histograms
+```{r compare, out.height="50%", out.width="50%", echo=TRUE}
+par(mfrow=c(1,2))
+hist(act_new_sd$Total_Steps,
+     col = "orange", main="Steps Frequency not NA", xlab = "Step Intervals")
+abline(h = seq(0, 35, 2.5), lty = 2, col = "gray")
+hist(act_steps_day$'Total_Steps', 
+     col = "green", main="Steps Frequency NA Filled", xlab = "Step Intervals")
+abline(h = seq(0, 30, 2.5), lty = 2, col = "gray")
+```
+```{r newMeanMedian, echo=TRUE}
+mean(act_new_sd$Total_Steps)
+median(act_new_sd$Total_Steps)
+```
+
+After change nulls, the interval 10000 to 15000 has more frequency and the median
+change to 10765.
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
-**Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.**
+**Create a new factor variable in the dataset with two levels – “weekday” and 
+“weekend” indicating whether a given date is a weekday or weekend day.**
 
-**Make a panel plot containing a time series plot (i.e. \color{red}{\verb|type = "l"|}type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.**
+```{r week, echo=TRUE}
+week <- weekdays(as.Date(act_fill$date))
+dayweek <- factor(week, 
+                  levels = c("lunes", "martes", "miércoles", "jueves", 
+                             "viernes", "sábado", "domingo"), 
+                  labels = c("weekday", "weekday", "weekday", "weekday", 
+                             "weekday", "weekend", "weekend"))
+
+act_fill_week <- cbind(act_fill, dayweek)
+```
+
+**Make a panel plot containing a time series plot (i.e. type = "l") of the 
+5-minute interval (x-axis) and the average number of steps taken, averaged 
+across all weekday days or weekend days (y-axis). See the README file in the 
+GitHub repository to see an example of what this plot should look like using
+simulated data.**
+
+```{r panel_plot, echo=TRUE}
+aid <- aggregate(steps ~ interval + dayweek, data = act_fill_week, mean)
+ggplot(aid, aes(x=interval, y=steps, color=dayweek)) + geom_line()+
+        facet_grid(dayweek ~.) + xlab("Interval") + ylab("Mean of Steps")
+```
+
+
+
+
+
